# RISC-V-Emulator

./: CMakeLists.txt  address.hpp  bit_lru_policy.hpp  cache.hpp  cmd_parser.cpp  cmd_parser.hpp  emulator.hpp  functions.hpp  instrunctions_types.hpp  lru_policy.hpp  main.cpp  memory.hpp  policy_base.hpp  processing.hpp  system_parameters.hpp  task.asm
